--- a/src/exercise/07.md
+++ b/src/exercise/07.md
@@ -86,4 +86,4 @@ this workshop. Learn more: https://github.com/facebook/react/issues/21285
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=alexander.tornvall%40icloud.com).
